menambahkan file paragraf

--- a/indek.html
+++ b/indek.html
@@ -8,5 +8,16 @@
   </head>
   <body>
     <h1>hello world!</h1>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis quos
+      ab harum animi, minima impedit. Odio, debitis ipsam? Rem saepe repudiandae
+      eius libero, repellat aperiam laboriosam assumenda velit esse delectus?
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique
+      ducimus aliquam quos doloremque nostrum veritatis ullam et! Vero, nihil?
+      Vitae consequuntur reprehenderit quo hic id facilis itaque ratione beatae
+      quam?
+    </p>
   </body>
 </html>
